--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,4 +1,4 @@
-ianChrist007 built the Philippine Check Writer app as a free app. This SERVICE is provided by ianChrist007 and is intended for use as is.
+The Philippine Check Writer app is built as a free app. This SERVICE is provided by developer ianChrist007 and is intended for use as is.
 
 Information Collection and Use
 
@@ -8,7 +8,7 @@ Payee names
 
 Amounts
 
-Check details (e.g., date, number, memo)
+Check details (e.g., date, number, purpose)
 
 This information is stored locally on your device only. We do not collect, transmit, or share any of your personal or financial data to our servers or any third parties.
 
@@ -37,3 +37,4 @@ Contact Us
 
 If you have any questions or suggestions about this Privacy Policy, please contact us at:
 📧 abusyday007@gmail.com
+
